--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">BookShop</string>
+    <string name="searchTitleLabel">Search Title :</string>
+    <string name="Title">Title :</string>
+    <string name="Author">Author :</string>
+    <string name="ISBN">ISBN :</string>
+    <string name="Price">Price :</string>
+    <string name="Intro">Introduction :</string>
+
 </resources>
